# lantern

./: .markdownlint.json  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  highlighter.rs  lib.rs  metadata.rs  parser.rs  printer.rs  slide.rs  term.rs  theme.rs  validator.rs
docs/: book.toml
docs/src/: SUMMARY.md  extensions.md  logging.md  quickstart.md
docs/src/appendices/: symbols.md  themes.md
examples/: learn-markdown.md  learn-rust.md
ui/: Cargo.toml
ui/src/: app.rs  image.rs  layout.rs  lib.rs  renderer.rs  viewer.rs
