[package]
name = "lantern-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
owo-colors = "4.2.3"
ratatui = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
lantern-core = { path = "../core" }
lantern-ui = { path = "../ui" }

[[bin]]
name = "lantern"
path = "src/main.rs"
