[package]
name = "slides-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
owo-colors = "4.2.3"
crossterm = "0.29.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
terminal-colorsaurus = "1.0.1"
thiserror = "2.0.17"
toml = "0.9.7"
